[gd_scene load_steps=9 format=3 uid="uid://dundmb1mxylks"]

[ext_resource type="Texture2D" uid="uid://ctevmeiv5nu5t" path="res://Assets/MenuScreen.png" id="1_82vm7"]
[ext_resource type="Script" path="res://Script/main.gd" id="1_xkqao"]
[ext_resource type="FontFile" uid="uid://287afp8wxi3m" path="res://REDWING-LIGHT.OTF" id="2_3046l"]
[ext_resource type="PackedScene" uid="uid://b4eyarnqhae8m" path="res://Assets/game_controls_panel.tscn" id="3_hxltu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6ec6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyaqv"]
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p87vm"]
bg_color = Color(0.831373, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pah71"]
bg_color = Color(0.972549, 0.223529, 0.0352941, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_xkqao")

[node name="MenuScreen" type="Sprite2D" parent="."]
position = Vector2(568, 324)
texture = ExtResource("1_82vm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -424.0
offset_right = 390.0
offset_bottom = -38.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_x6ec6")

[node name="StartButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 49.0
offset_right = 147.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3046l")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eyaqv")
theme_override_styles/hover = SubResource("StyleBoxFlat_p87vm")
text = "Start"

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 164.0
offset_right = 147.0
offset_bottom = 235.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3046l")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eyaqv")
theme_override_styles/hover = SubResource("StyleBoxFlat_p87vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pah71")
text = "How to play"

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 280.0
offset_right = 147.0
offset_bottom = 351.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3046l")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eyaqv")
theme_override_styles/hover = SubResource("StyleBoxFlat_p87vm")
text = "Quit"

[node name="GameControlsPanel" parent="CanvasLayer" instance=ExtResource("3_hxltu")]
visible = false

[connection signal="pressed" from="CanvasLayer/Panel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/QuitButton" to="." method="_on_quit_button_pressed"]
